--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "prod": "node index.js",
+    "start": "nodemon server.js",
+    "prod": "node server.js",
     "dev": "npm run start"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.8"
   }
